# rust-axum-htmx-tailwind

./: Cargo.toml
assets/css/: style.css
src/: main.rs
templates/: base.html  contact_form.html  contact_list.html  contact_search.html  contact_single_row.html  index.html
