[package]
name = "contacts-rust-askama"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.1"
axum = "0.6.20"
serde = { version = "1.0.189", features = ["serde_derive"] }
tokio = { version = "1.33.0", features = ["tokio-macros", "full"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.4.4", features = ["fs"] }
tracing-subscriber = "0.3.17"
uuid = { version = "1.5.0", features = ["v4"] }
